2006-01-24 14:00 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (gridPhase2) call gridfacerCollapse.
	* src/gridfacer.c (gridfacerCollapseEdge) fixed bug that added
	edges from other faces to edge list.

2006-01-24 13:07 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridAR) return -999.0 if anything breaks.

2006-01-24 12:48 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerCollapse) refactored to only do
	edges on face. warning O(nedges^2).

2006-01-24 11:33 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridEdgeRatio) report gridMap failure and
	return -1.0

2006-01-23 16:22 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerRemoveEdgesWithNode) removes edges
	touching node.  
	* src/gridfacer.c (gridfacerCollapseEdge) edges are repaired.

2006-01-23 16:12 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerCollapse,gridfacerCollapseEdge) working,
	but edges need to be cleaned up.

2006-01-20 15:23 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerEquateLengths) smooth node location to
	reduce the longest ratio edge. this got 0.005 to work, but more
	iterations broke it again.

2006-01-20 11:59 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerTecplot) dump all trhee axes of metric
	ellipsoid.

2006-01-19 16:41 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerSplit) to improve new node locations,
	call smoother after insert.

2006-01-19 14:05 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerSplitProblemProjectionEdges) to
	split any problematice edges that arise from swapping.
	* src/gridfacer.c (gridfacerSplit) untangle after each split.

2006-01-19  8:32 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerTurnCameraOn,gridfacerCameraActive) turn
	tecplot output on, which dumps when each edge is removed.

2006-01-18 16:38 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerTecplot) working.

2006-01-18 11:15 Mike Park  <mike.park@nasa.gov>
